Fix alignment, padding and icons

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -119,7 +119,11 @@ a {
   }
 
   label, input[type="checkbox"] + label {
-    display: inline;
+    display: inline-block;
+    width: calc(100% - 2.5rem);
+    margin: 0 0 0 0.5rem;
+    vertical-align: top;
+    line-height: 1.2;
   }
   .filter-block {
     margin-bottom: 15px;
